--- a/index.html
+++ b/index.html
@@ -48,18 +48,13 @@
                 <a href="https://www.instagram.com/voguemagazine/" class="home__social-link">Instagram</a>
                 <a href="https://twitter.com/voguemagazine" class="home__social-link">Twitter</a>
             </div>
-
-            <h2 class="home__subtitle">Singer<br>Actress<br>Model</h2>
-
-            
-
         </div>
     </main>
 
     <!-- MAIN -->
     <script src="assets/js/main.js"></script>
     
-     <!-- ICONOS -->
+     <!-- Icons-->
     <script  type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
