--- a/index.html
+++ b/index.html
@@ -37,11 +37,25 @@
         <div class="home">
             <h1 class="home__title">Selena <br> Is <br> Back </h1>
 
-            <div class="home__slideshow">
-                <div class="home__slideshow-item">
+                <!-- Slide Show -->
+            <div class="slideshow">
+                <div class="slideshow-item">
                     <img src="assets/img/img1.jpg" alt="Selena Vogue">
                 </div>
+
+                <div class="slideshow-item">
+                    <img src="assets/img/img2.jpg" alt="Selena Vogue">
+                </div>
+
+                <div class="slideshow-item">
+                    <img src="assets/img/img3.jpg" alt="Selena Vogue">
+                </div>
+
+                <div class="slideshow-item">
+                    <img src="assets/img/img4.jpg" alt="Selena Vogue">
+                </div>
             </div>
+
 
             <div class="home__social">
                 <a href="https://www.facebook.com/Vogue/" class="home__social-link">Facebook</a>
@@ -50,7 +64,6 @@
             </div>
         </div>
     </main>
-
     <!-- MAIN -->
     <script src="assets/js/main.js"></script>
     
