--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         </nav>
     </header>
 
-    <main class="l-main bd-grid">
+<main>
+    <seection class="l-main bd-grid">
         <div class="home">
-            <h1 class="home__title">Selena <br> Is <br> Back </h1>
+            <h1 class="home__title">Text <br> Text <br> Text </h1>
 
                 <!-- Slide Show -->
             <div class="slideshow">
@@ -63,6 +64,8 @@
                 <a href="https://twitter.com/voguemagazine" class="home__social-link">Twitter</a>
             </div>
         </div>
+    </section> 
+    
     </main>
     <!-- MAIN -->
     <script src="assets/js/main.js"></script>
